# onion-py

./: Cargo.toml  build_and_test.py  pyproject.toml
src/: lib.rs  pycallable.rs
src/script/: mod.rs
src/script/stdlib/: bytes.rs  math.rs  mod.rs  string.rs  time.rs  tuple.rs  types.rs
src_py/onion/: __init__.py  __init__.pyi
src_py/onion/core/: __init__.py
test/: test_onion.py
