[package]
name = "onion-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "onion_py"
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.10.0"
onion-frontend = "0.2.1"
onion-vm = "0.2.4"
pyo3 = { version = "0.25.1", features = ["experimental-async"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
rust-arc-gc = "0.2.1"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
